# fkoff

./: LICENSE.md  README.MD  pyproject.toml
please/: please.py  quotes.json
tests/: test_please.py
